@@ -5,55 +5,55 @@ class StringMethodsTest < Test::Unit::TestCase
   include ShellTest::StringMethods
 
   #
-  # assert_output_equal test
+  # assert_str_equal test
   #
 
-  def test_assert_output_equal
-    assert_output_equal %{
+  def test_assert_str_equal
+    assert_str_equal %{
     line one
       line two
     }, "line one\n  line two\n"
 
-    assert_output_equal %{
+    assert_str_equal %{
     line one
       line two}, "line one\n  line two"
 
-    assert_output_equal %{  \t   \r
+    assert_str_equal %{  \t   \r
     line one
     line two
     }, "line one\nline two\n"
 
-    assert_output_equal %{
+    assert_str_equal %{
     
     
     }, "\n\n"
 
-    assert_output_equal %{
+    assert_str_equal %{
     
     }, "\n"
 
-    assert_output_equal %{  \t   \r
+    assert_str_equal %{  \t   \r
     
     }, "\n"
 
-    assert_output_equal %{
+    assert_str_equal %{
     }, ""
 
-    assert_output_equal %q{}, ""
-    assert_output_equal %q{line one
+    assert_str_equal %q{}, ""
+    assert_str_equal %q{line one
 line two
 }, "line one\nline two\n"
   end
 
   #
-  # assert_alike test
+  # assert_str_match test
   #
 
-  def test_assert_alike
-    assert_alike(/abc/, "...abc...")
+  def test_assert_str_match
+    assert_str_match(/abc/, "...abc...")
   end
 
-  def test_assert_alike_regexp_escapes_strings
-    assert_alike "a:...:c", "...alot of random stuff toc..."
+  def test_assert_str_match_regexp_escapes_strings
+    assert_str_match "a:...:c", "...alot of random stuff toc..."
   end
 end
